--- a/lab-1-1/board/Makefile
+++ b/lab-1-1/board/Makefile
@@ -1,7 +1,7 @@
 # Copyright (C) 2018 Daniel Page <csdsp@bristol.ac.uk>
 #
-# Use of this source code is restricted per the CC BY-NC-ND license, a copy of 
-# which can be found via http://creativecommons.org (and should be included as 
+# Use of this source code is restricted per the CC BY-NC-ND license, a copy of
+# which can be found via http://creativecommons.org (and should be included as
 # LICENSE.txt within the associated archive or repository).
 
 DEVICE := $(shell if [ -e "/dev/scale-board" -a -r "/dev/scale-board" -a -w "/dev/scale-board" ] ; then echo "/dev/scale-board" ; else echo "" ; fi)
@@ -14,7 +14,7 @@ ifeq "${TARGET}" ""
   $(warning TARGET environment variable is not set)
 endif
 
-PROJECT = helloworld
+PROJECT = dongle
 
   build-${PROJECT}      :
 	@make --no-builtin-rules -f ${TARGET}/build/lib/scale.mk BSP="${TARGET}/build" USB="/dev/scale-board" PROJECT="${PROJECT}" all
