--- a/36722/board/Makefile
+++ b/36722/board/Makefile
@@ -1,7 +1,7 @@
 # Copyright (C) 2018 Daniel Page <csdsp@bristol.ac.uk>
 #
-# Use of this source code is restricted per the CC BY-NC-ND license, a copy of 
-# which can be found via http://creativecommons.org (and should be included as 
+# Use of this source code is restricted per the CC BY-NC-ND license, a copy of
+# which can be found via http://creativecommons.org (and should be included as
 # LICENSE.txt within the associated archive or repository).
 
 DEVICE := $(shell if [ -e "/dev/scale-board" -a -r "/dev/scale-board" -a -w "/dev/scale-board" ] ; then echo "/dev/scale-board" ; else echo "" ; fi)
@@ -25,6 +25,11 @@ program-${PROJECT}      :
 	@make --no-builtin-rules -f ${TARGET}/build/lib/scale.mk BSP="${TARGET}/build" USB="/dev/scale-board" PROJECT="${PROJECT}" program
 program-${PROJECT}-term :
 	@putty -serial -sercfg 9600,8,n,1,N /dev/scale-board
+
+emulate-${PROJECT}      :
+	@python -O emulator.py --debug --host 127.0.0.1 --port 5556 --file ${PROJECT}.hex
+emulate-${PROJECT}-term :
+	@putty -raw -P 5556 127.0.0.1
 
 program-36722 :
 	@lpc21isp -wipe -hex ./36722.hex /dev/scale-board 9600 12000
