--- a/36722/attack/Makefile
+++ b/36722/attack/Makefile
@@ -1,4 +1,4 @@
 all:
-	gcc -Wall -lm -o3 -o attack Source/attack.c 
+	gcc -Wall -lgsl -lgslcblas -lm -o3 -o attack Source/attack.c 
 clean:
 	rm attack
